Sync user_collection
