# src/sync/user-artworks/dto/get-user-artworks-query.dto.ts
@@ -1,0 +1,11 @@
+import { IsEnum, IsOptional, IsISO8601 } from 'class-validator';
+
+export class GetUserArtworksQueryDto {
+  @IsOptional()
+  @IsEnum(['es', 'en'])
+  language?: 'es' | 'en' = 'es';
+
+  @IsOptional()
+  @IsISO8601()
+  updatedAfter?: string;
+}
